= Changelog

This document provides a high-level view of the changes to the macOS Security Compliance Project.

== [Big Sur, Revision 6.1] - 2022-12-06

* Rules
** Modified Rules
*** os_dvdram_disable
*** os_hibernate_mode_enable
*** os_tftpd_disable
*** sysprefs_automatic_logout_enforce
*** sysprefs_time_server_configure
** Bug fixes

* Baselines
** Updated all baselines

* Scripts
** generate_guidance
*** Added custom references to compliance check script
*** Bug Fixes
** generate_baseline
*** Added author function
*** Bug Fixes

== [Big Sur, Revision 6] - 2022-10-20

* Rules
** Added Organization Defined Value (ODV) support
** Added Rules
** Modified Rules
*** os_sudoers_timestamp_type_configure
*** sysprefs_automatic_logout_enforce
*** system_wide_preferences_configure
** Removed Rules
*** audit_flags_configure
*** os_sudoers_tty_configure
** Bug fixes

* Baselines
** Added parent_value field
** Updated all baselines

* Scripts
** generate_guidance
*** Added ruby gem installation
*** Bug Fixes
** generate_baseline
** Added tailoring function
*** Bug Fixes
** generate_mappings
*** Bug Fixes
** generate_scap
*** Bug Fixes

== [Big Sur, Revision 5] - 2022-03-16

* Rules
** Added Rules
*** audit_control_acls_configure
*** audit_control_group_configure
*** audit_control_mode_configure
*** audit_control_owner_configure
*** audit_flags_configure
*** audit_retention_configure_sixty_days
*** os_application_sandbox
*** os_blank_bluray_disable
*** os_blank_cd_disable
*** os_blank_dvd_disable
*** os_bluray_read_only_enforce
*** os_burn_support_disable
*** os_cd_read_only_enforce
*** os_disk_image_disable
*** os_dvdram_disable
*** os_efi_integrity_validated
*** os_erase_content_and_settings_disabled
*** os_guest_folder_removed
*** os_hibernate_mode_destroyfvkeyonstandby_enable
*** os_hibernate_mode_enable
*** os_install_log_retention_configure
*** os_library_validation_enabled
*** os_mobile_file_integrity_enable
*** os_password_hint_remove
*** os_safari_open_safe_downloads