@@ -1,4 +1,4 @@
 os: "11.0"
 version: "Big Sur Guidance, Revision 6.1"
 cpe: o:apple:macos:11.0
-date: "2022-12-06"
+date: "2022-12-07"
