@@ -1,6 +1,6 @@
 title: "macOS 11.0: Security Configuration - DISA STIG"
 description: |
-  This guide describes the actions to take when securing a macOS system against the Apple macOS 11 (Big Sur) STIG - Ver 1, Rel 5.
+  This guide describes the actions to take when securing a macOS system against the Apple macOS 11 (Big Sur) STIG - Ver 1, Rel 6.
 authors: |
   |===
   |Dan Brodjieski|National Aeronautics and Space Administration
