@@ -1,6 +1,6 @@
 title: "macOS 11.0: Security Configuration - CIS Benchmarks"
 description: |
-  This guide describes the actions to take when securing a macOS system against the CIS Apple macOS 11.0 Big Sur v2.1.0 Benchmark (Level 1)
+  This guide describes the actions to take when securing a macOS system against the CIS Apple macOS 11.0 Big Sur v3.0.0 Benchmark (Level 1)
 authors: |
   The CIS Benchmarks are referenced with the permission and support of the Center for Internet Security® (CIS®)
   |===
