@@ -60,8 +60,8 @@ titles:
   800-53r5_moderate: NIST SP 800-53 Rev 5 Moderate Impact
   800-53r5_low: NIST SP 800-53 Rev 5 Low Impact
   800-171: NIST 800-171 Rev 2
-  cis_lvl1: CIS Apple macOS 11.0 Big Sur v2.1.0 Benchmark (Level 1)
-  cis_lvl2: CIS Apple macOS 11.0 Big Sur v2.1.0 Benchmark (Level 2)
+  cis_lvl1: CIS Apple macOS 11.0 Big Sur v3.0.0 Benchmark (Level 1)
+  cis_lvl2: CIS Apple macOS 11.0 Big Sur v3.0.0 Benchmark (Level 2)
   cisv8: CIS Controls Version 8
   stig: Apple macOS 11 (Big Sur) STIG - Ver 1, Rel 6
   cnssi-1253: Committee on National Security Systems Instruction No. 1253
