@@ -18,7 +18,7 @@ references:
   800-53r4: 
     - SC-8
   srg: 
-    - SRG-OS-000481-GPOS-000481
+    - SRG-OS-000481-GPOS-00481
   disa_stig: 
     - APPL-11-002062
   800-171r2:
